--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 48em){ 
+  html {
+    /* This defines what 1rem is: 1rem = 10px; 10/16 = 62.5 */
+    font-size: 50%; 
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@media only screen and (max-width: 42em){ 
+  html {
+    /* This defines what 1rem is: 1rem = 10px; 10/16 = 62.5 */
+    /* font-size: 45%;  */
+  }
+}
+
+@media only screen and (max-width: 37.5em){ 
+  html {
+    /* This defines what 1rem is: 1rem = 10px; 10/16 = 62.5 */
+    /* font-size: 40%;  */
+  }
+}
+
+@media only screen and (max-width: 31.3em){ 
+  html {
+    /* This defines what 1rem is: 1rem = 10px; 10/16 = 62.5 */
+    /* font-size: 35%;  */
+  }
+}
+
+@media only screen and (max-width: 26em){ 
+  html {
+    /* This defines what 1rem is: 1rem = 10px; 10/16 = 62.5 */
+    /* font-size: 30%;  */
+  }
+}
+
+.container {
+  display: grid;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  grid-template-columns: 50%;
+  width: 100%;
+  height: 100vh;
 }
