--- a/src/components/PhotosMaximisedGallery/MaximisedGallery.css
+++ b/src/components/PhotosMaximisedGallery/MaximisedGallery.css
@@ -1,10 +1,10 @@
 .maximised-gallery-container {
     width: 100%;
-    height: 100%;
+    height: 90vh;
     display: grid;
     grid-template-areas: "x . ." "left photo right" ". carousel .";
     grid-template-columns: 5rem 1fr 5rem;
-    grid-template-rows: 5rem 1fr 10rem;
+    grid-template-rows: 5rem 1fr 7rem;
     color: whitesmoke;
     font-size: 10rem;
     font-family: "Hack";
@@ -83,7 +83,7 @@
     grid-row: 1/1;
     grid-column: 1/1;
     max-width: 90%;
-    max-height: 70vh;
+    max-height: 60vh;
     width: auto;
     height: auto;
     z-index: 1;
